--- a/index_m.html
+++ b/index_m.html
@@ -79,5 +79,10 @@
     <div class="wrap09">
         <div class="c09"></div>
     </div>
+    <footer>
+        <div class="wrap10">
+            <div class="c10"></div>
+        </div>
+    </footer>
 </body>
 </html>
