--- a/index_m.html
+++ b/index_m.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jinwoo's Protfolio_M</title>
+    <title>LimJinwoo_M</title>
     <link rel="stylesheet" href="master_m.css">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="wrap01"> 
@@ -77,7 +79,14 @@
         </div>
     </div>
     <div class="wrap09">
-        <div class="c09"></div>
+        <div class="c09">
+            <div class="c09_video">
+                <video controls loop id="v_09">
+                    <source src="img/video/v_09.mp4" type="video/mp4">
+                    해당 브라우저는 video 태그를 지원하지 않습니다.
+                </video>
+            </div>
+        </div>
     </div>
     <footer>
         <div class="wrap10">
