--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jinwoo's Protfolio</title>
+    <title>LimJinWoo</title>
     <link rel="stylesheet" href="master.css">
-    
-        <script type="text/javascript"> var UserAgent = navigator.userAgent; if (UserAgent.match(/iPhone|ipad|Android|Windows CE|BlackBerry|Symbian|Windows Phone|webOS|Opera Mini|Opera Mobi|POLARIS|IEMobile|lgtelecom|nokia|SonyEricsson/i) != null || UserAgent.match(/LG|SAMSUNG|Samsung/) != null) { location.href = "index_m.html"; }
+
+    <script type="text/javascript"> var UserAgent = navigator.userAgent; if (UserAgent.match(/iPhone|ipad|Android|Windows CE|BlackBerry|Symbian|Windows Phone|webOS|Opera Mini|Opera Mobi|POLARIS|IEMobile|lgtelecom|nokia|SonyEricsson/i) != null || UserAgent.match(/LG|SAMSUNG|Samsung/) != null) { location.href = "index_m.html"; }
     </script>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -86,10 +88,18 @@
         </div>
     </div>
     <div class="wrap09">
-        <div class="c09"></div>
+        <div class="c09">
+            <div class="c09_video">
+                <video controls loop id="v_09">
+                    <source src="img/video/v_09.mp4" type="video/mp4">
+                    해당 브라우저는 video 태그를 지원하지 않습니다.
+                </video>
+            </div>
+        </div>
     </div>
     <footer>
         <div class="wrap10">
+            
             <div class="c10"></div>
         </div>
     </footer>
